(W3BBZ): bootstrap this madness

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,4 +1,7 @@
 {
-  "hello": "H3LL0 LEDGER GUN",
-  "noAccounts": "No accounts available..."
+  "nav": {
+    "home": "Home",
+    "nft": "NFT",
+    "about": "About"
+  }
 }
